update pocketbase file again, and update nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@
 
 server {
     listen 80;
-    server_name linux.fireship.app;
+    server_name linux.dylandrendel.com;
     
     # Redirect HTTP to HTTPS
     return 301 https://$server_name$request_uri;
@@ -10,11 +10,11 @@ server {
 
 server {
     listen 443 ssl;
-    server_name linux.fireship.app;
+    server_name linux.dylandrendel.com;
 
     # SSL configuration using Cloudflare certificates
-    ssl_certificate /etc/ssl/cert.pem;
-    ssl_certificate_key /etc/ssl/key.pem;
+    # ssl_certificate /etc/ssl/cert.pem;
+    # ssl_certificate_key /etc/ssl/key.pem;
 
     # SSL settings (recommended for security)
     ssl_protocols TLSv1.2 TLSv1.3;
